syntax = "proto3";

option csharp_namespace = "ProductInventory.Server";

package inventory;

service InventoryService {
    // Unary call
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    
    // Server streaming
    rpc WatchProductStock (WatchStockRequest) returns (stream StockUpdate);
    
    // Client streaming 
    rpc  BatchUpdateProducts (stream UpdateProductRequest) returns (BatchUpdateResponse);

    // Bidirectional streaming
    rpc SyncInventory (stream InventorySync) returns (stream InventorySync);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 stock = 4;
}

message GetProductRequest {
    string product_id = 1;
}

message UpdateProductRequest {
    string product_id = 1;
    optional string name = 2;
    optional string description = 3;
    optional double price = 4;
    optional int32 stock_adjustment = 5;
}

message DeleteProductRequest {
    string product_id = 1;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}

message ProductResponse {
    string product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string last_updated = 6;
}

message WatchStockRequest {
    string product_id = 1;
}

message StockUpdate {
    string product_id = 1;
    int32 current_stock = 2;
    string timestamp = 3;
}

message BatchUpdateResponse {
    int32 products_updated = 1;
    repeated string updated_product_ids = 2;
}

message InventorySync {
    string product_id = 1;
    int32 stock = 2;
    string timestamp = 3;
}